nav layout issues on smaller screens

--- a/res/less/main.less
+++ b/res/less/main.less
@@ -140,8 +140,14 @@ header {
 }
 
 @media screen and (max-width: 640px) {
-    html {
-        //font-size: 0.8em;
+    nav ul {
+        li {
+            display: block;
+
+            &:not(:first-child):before {
+                content: '';
+            }
+        }
     }
 
     header > div > div {
